--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ before_script:
   - composer install
   - cd web
   # Test latest commit on current branch.
-  - git clone --branch=$TRAVIS_BRANCH https://github.com/$TRAVIS_REPO_SLUG.git profiles/custom/poc_profile
+  - git clone --branch=$TRAVIS_BRANCH git@github.com:$TRAVIS_REPO_SLUG.git profiles/custom/poc_profile
   - ../vendor/bin/drush si poc_profile -y --db-url=mysql://travis:@127.0.0.1/drupal
   - ../vendor/bin/drush cr
   # Run Drush web server.
