--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-  "name": "ec-europa/poc_profile",
-  "description": "Drupal 8 proof of concept: Installation profile.",
+  "name": "ec-europa/oe_profile",
+  "description": "OpenEuropa installation profile.",
   "type": "drupal-profile",
   "license": "EUPL-1.1"
 }
