--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "ec-europa/oe_profile",
+  "name": "openeuropa/oe_profile",
   "description": "OpenEuropa installation profile.",
   "type": "drupal-profile",
   "license": "EUPL-1.1"
