--- a/oe_profile.info.yml
+++ b/oe_profile.info.yml
@@ -1,12 +1,11 @@
 name: OpenEuropa Profile
 type: profile
-description: OpenEuropa installation profile.
+description: 'OpenEuropa installation profile.'
 project: oe_profile
 version: VERSION
 core: 8.x
 
 dependencies:
-
   - node
   - history
   - block
