--- a/behat.yml.dist
+++ b/behat.yml.dist
@@ -7,20 +7,6 @@ default:
         - Drupal\DrupalExtension\Context\MinkContext
         - Drupal\DrupalExtension\Context\DrupalContext
         - Drupal\DrupalExtension\Context\MarkupContext
-        - Drupal\Tests\oe_theme\Behat\DrupalContext
-        - Drupal\Tests\oe_theme\Behat\MinkContext
-        - Drupal\Tests\oe_theme\Behat\TransformationContext:
-            elements:
-              logo: "a.ecl-logo"
-              breadcrumb: "nav.ecl-breadcrumbs"
-              corporate block: ".demo-block-footer-corporate"
-              identity block: ".demo-block-footer-identity"
-              contacts block: ".demo-block-footer-ec"
-              sites switcher: ".demo-block-site-switcher"
-              search box: ".demo-block-header-search"
-              language switcher: ".demo-block-language-switcher"
-            pages:
-              login: "/user/login"
   extensions:
     Behat\MinkExtension:
       goutte: ~
@@ -30,15 +16,6 @@ default:
     Drupal\DrupalExtension:
       api_driver: "drupal"
       drupal:
-        drupal_root: "build"
-      region_map:
-        page: "body"
-        header: ".ecl-site-header"
-        navigation: ".ecl-navigation-menu"
-        about dropdown menu: "#nav-menu-expandable-group-2"
-        priorities dropdown menu: "#nav-menu-expandable-group-3"
-        identity footer: ".ecl-footer__site-identity"
-        corporate footer: ".ecl-footer__site-corporate"
-        contacts footer: ".ecl-footer__ec"
+        drupal_root: "${drupal.root}"
   formatters:
     progress: ~
