--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,8 @@
     "prefer-stable": true,
     "require": {
         "php": "^7.1",
-        "openeuropa/code-review": "*",
-        "openeuropa/task-runner": "*",
+        "drupal/styleguide": "^1.0@alpha",
+        "openeuropa/oe_paragraphs": "*",
         "openeuropa/oe_theme": "dev-OPENEUROPA-298#4009a01"
     },
     "require-dev": {
@@ -20,32 +20,15 @@
         "composer/installers": "^1.2",
         "drupal/console": "^1",
         "drupal/config_devel": "~1.2",
-        "openeuropa/oe_paragraphs": "dev-master",
         "drush/drush": "^9",
-        "drupal/drupal-extension": "^3.4",
+        "drupal/drupal-extension": "^4.0.0@alpha",
         "symfony/dom-crawler": "^3",
-        "webflo/drupal-core-require-dev": "^8.5",
-        "drupal/styleguide": "~1.0-alpha3"
+        "webflo/drupal-core-require-dev": "^8.6"
     },
     "scripts": {
-        "drupal-scaffold": "DrupalComposer\\DrupalScaffold\\Plugin::scaffold"
-    },
-    "autoload": {
-        "psr-4": {
-            "Drupal\\oe_theme\\": "./src/"
-        }
-    },
-    "autoload-dev": {
-        "psr-0": {
-            "Drupal\\Tests": "build/core/tests",
-            "Drupal\\KernelTests": "build/core/tests",
-            "Drupal\\FunctionalTests": "build/core/tests",
-            "Drupal\\FunctionalJavascriptTests": "build/core/tests"
-        },
-        "psr-4": {
-            "Drupal\\simpletest\\": "build/core/modules/simpletest/src",
-            "Drupal\\Tests\\oe_theme\\": "tests"
-        }
+        "drupal-scaffold": "DrupalComposer\\DrupalScaffold\\Plugin::scaffold",
+        "post-install-cmd": "./vendor/bin/run drupal:site-setup",
+        "post-update-cmd": "./vendor/bin/run drupal:site-setup"
     },
     "repositories": {
         "drupal": {
@@ -53,18 +36,52 @@
             "url": "https://packages.drupal.org/8"
         }
     },
+    "autoload": {
+        "psr-4": {
+            "Drupal\\oe_profile\\": "./src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Drupal\\Tests\\oe_profile\\": "tests"
+        }
+    },
     "extra": {
+        "composer-exit-on-patch-failure": true,
         "patches": {
             "drupal/core": {
-                "https://www.drupal.org/project/drupal/issues/474684": "https://www.drupal.org/files/issues/474684-151.patch",
-                "https://www.drupal.org/project/drupal/issues/2943172": "https://www.drupal.org/files/issues/2943172-kernel-test-base.patch"
+                "https://www.drupal.org/project/drupal/issues/474684": "https://www.drupal.org/files/issues/2018-05-02/474684-165.patch",
+                "https://www.drupal.org/project/drupal/issues/2943172": "https://www.drupal.org/files/issues/2018-04-15/2943172-kernel-test-base-2.patch",
+                "https://www.drupal.org/project/drupal/issues/2599228": "https://www.drupal.org/files/issues/2599228-31-tests-only.patch"
+            }
+        },
+        "patches-ignore": {
+            "openeuropa/oe_theme": {
+                "drupal/core": {
+                    "https://www.drupal.org/project/drupal/issues/474684": "https://www.drupal.org/files/issues/474684-151.patch",
+                    "https://www.drupal.org/project/drupal/issues/2943172": "https://www.drupal.org/files/issues/2943172-kernel-test-base.patch"
+                }
             }
         },
         "installer-paths": {
-            "build/core": ["type:drupal-core"],
-            "build/profiles/contrib/{$name}": ["type:drupal-profile"],
-            "build/modules/contrib/{$name}": ["type:drupal-module"],
-            "build/themes/contrib/{$name}": ["type:drupal-theme"]
+            "build/core": [
+                "type:drupal-core"
+            ],
+            "build/profiles/contrib/{$name}": [
+                "type:drupal-profile"
+            ],
+            "build/modules/contrib/{$name}": [
+                "type:drupal-module"
+            ],
+            "build/themes/contrib/{$name}": [
+                "type:drupal-theme"
+            ]
+        }
+    },
+    "config": {
+        "sort-packages": true,
+        "platform": {
+            "php": "7.1.9"
         }
     }
 }
