--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,18 @@ services:
       XDEBUG_CONFIG: "remote_enable=1 remote_host=${DOCKER_HOST_IP} remote_port=9000 idekey=PHPSTORM remote_autostart=1"
       PHP_IDE_CONFIG: "serverName=Test"
       COMPOSER_MEMORY_LIMIT: "2G"
+      COMPOSER_CACHE_DIR: "/tmp/composer"
 
   mysql:
     image: fpfis/mysql56
+
+  node:
+    image: "node:9.5.0"
+    user: "node"
+    working_dir: /home/node/app/build/themes/contrib/oe_theme
+    environment:
+      - NODE_ENV=${NODE_ENV}
+      - SHELL=bash
+    volumes:
+      - ./:/home/node/app
+    command: "sleep infinity"
