--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         "openeuropa/oe_theme": "dev-OPENEUROPA-298#4009a01"
     },
     "require-dev": {
-        "nikic/php-parser": "*",
+        "nikic/php-parser": "~3",
         "cweagans/composer-patches": "~1.0",
         "openeuropa/code-review": "^0.2",
         "openeuropa/task-runner": "^0.5",
