--- a/composer.json
+++ b/composer.json
@@ -8,21 +8,20 @@
     "require": {
         "php": "^7.1",
         "drupal/styleguide": "^1.0@alpha",
-        "openeuropa/oe_paragraphs": "*",
-        "openeuropa/oe_theme": "dev-OPENEUROPA-298#4009a01"
+        "openeuropa/oe_paragraphs": "dev-master",
+        "openeuropa/oe_theme": "dev-OPENEUROPA-298#a203052"
     },
     "require-dev": {
-        "nikic/php-parser": "~3",
+        "composer/installers": "^1.2",
         "cweagans/composer-patches": "~1.0",
+        "drupal/config_devel": "~1.2",
+        "drupal/console": "^1",
+        "drupal/drupal-extension": "^4.0.0@alpha",
+        "drush/drush": "^9",
+        "drupal-composer/drupal-scaffold": "^2.2",
+        "nikic/php-parser": "~3",
         "openeuropa/code-review": "^0.2",
         "openeuropa/task-runner": "^0.5",
-        "drupal-composer/drupal-scaffold": "^2.2",
-        "composer/installers": "^1.2",
-        "drupal/console": "^1",
-        "drupal/config_devel": "~1.2",
-        "drush/drush": "^9",
-        "drupal/drupal-extension": "^4.0.0@alpha",
-        "symfony/dom-crawler": "^3",
         "webflo/drupal-core-require-dev": "^8.6"
     },
     "scripts": {
