--- a/runner.yml.dist
+++ b/runner.yml.dist
@@ -9,14 +9,13 @@ drupal:
     password: ""
   site:
     profile: "oe_profile"
+    name: "OpenEuropa"
   post_install:
     - "./vendor/bin/drush en config_devel -y"
     - "./vendor/bin/drush cr"
   settings:
     settings:
       file_scan_ignore_directories:
-        - "node_modules"
-        - "bower_components"
         - "vendor"
         - "${drupal.root}"
 
@@ -25,9 +24,6 @@ commands:
     - { task: "symlink", from: "../../..", to: "${drupal.root}/profiles/custom/oe_profile" }
     - { task: "run", command: "drupal:drush-setup" }
     - { task: "run", command: "drupal:settings-setup" }
-    - { task: "run", command: "setup:phpunit" }
     - { task: "run", command: "setup:behat" }
-  setup:phpunit:
-    - { task: "process", source: "phpunit.xml.dist", destination: "phpunit.xml" }
   setup:behat:
     - { task: "process", source: "behat.yml.dist", destination: "behat.yml" }
