--- a/runner.yml.dist
+++ b/runner.yml.dist
@@ -19,6 +19,10 @@ drupal:
         - "vendor"
         - "${drupal.root}"
 
+selenium:
+  host: "http://selenium"
+  port: "4444"
+
 commands:
   drupal:site-setup:
     - { task: "symlink", from: "../../..", to: "${drupal.root}/profiles/custom/oe_profile" }
