--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '2'
 services:
 
   web:
-    image: fpfis/php71-dev
+    image: fpfis/httpd-php-dev:7.1
     working_dir: /var/www/html
     ports:
       - 8080:8080
@@ -11,19 +11,8 @@ services:
     environment:
       XDEBUG_CONFIG: "remote_enable=1 remote_host=${DOCKER_HOST_IP} remote_port=9000 idekey=PHPSTORM remote_autostart=1"
       PHP_IDE_CONFIG: "serverName=Test"
-      COMPOSER_MEMORY_LIMIT: "2G"
-      COMPOSER_CACHE_DIR: "/tmp/composer"
 
   mysql:
-    image: fpfis/mysql56
-
-  node:
-    image: "node:9.5.0"
-    user: "node"
-    working_dir: /home/node/app/build/themes/contrib/oe_theme
+    image: percona/percona-server:5.6
     environment:
-      - NODE_ENV=${NODE_ENV}
-      - SHELL=bash
-    volumes:
-      - ./:/home/node/app
-    command: "sleep infinity"
+      MYSQL_ALLOW_EMPTY_PASSWORD: "yes"
