--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "prefer-stable": true,
     "require": {
         "php": "^7.1",
-        "drupal/core": "~8.6",
+        "drupal/core": "~8.6@alpha",
         "openeuropa/oe_theme": ">=0.2"
     },
     "require-dev": {
