--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         "openeuropa/code-review": "~0.3",
         "openeuropa/composer-artifacts": "^0.1",
         "openeuropa/task-runner": "^0.5",
-        "webflo/drupal-core-require-dev": "~8.6"
+        "webflo/drupal-core-require-dev": "~8.6@alpha"
     },
     "scripts": {
         "drupal-scaffold": "DrupalComposer\\DrupalScaffold\\Plugin::scaffold",
