--- a/composer.json
+++ b/composer.json
@@ -20,9 +20,8 @@
         "nikic/php-parser": "~3",
         "openeuropa/code-review": "~0.3",
         "openeuropa/composer-artifacts": "^0.1",
-        "openeuropa/drupal-core-require-dev": "~8.6",
-        "openeuropa/task-runner": "^0.5",
-        "webflo/drupal-core-require-dev": "~8.6@alpha"
+        "openeuropa/drupal-core-require-dev": "~8.6@alpha",
+        "openeuropa/task-runner": "^0.5"
     },
     "scripts": {
         "drupal-scaffold": "DrupalComposer\\DrupalScaffold\\Plugin::scaffold",
