OPENEUROPA-770: Add enable patching in composer extras.

--- a/composer.json
+++ b/composer.json
@@ -43,6 +43,7 @@
                 }
             }
         },
+        "enable-patching": true,
         "installer-paths": {
             "build/core": ["type:drupal-core"],
             "build/profiles/contrib/{$name}": ["type:drupal-profile"],
