--- a/composer.json
+++ b/composer.json
@@ -19,9 +19,9 @@
         "drush/drush": "^9",
         "nikic/php-parser": "~3",
         "openeuropa/code-review": "~0.3",
-        "openeuropa/composer-artifacts": "^0.1",
+        "openeuropa/composer-artifacts": "~0.1",
         "openeuropa/drupal-core-require-dev": "~8.6",
-        "openeuropa/task-runner": "^0.5"
+        "openeuropa/task-runner": "~0.5"
     },
     "scripts": {
         "drupal-scaffold": "DrupalComposer\\DrupalScaffold\\Plugin::scaffold",
