--- a/.drone.yml
+++ b/.drone.yml
@@ -37,3 +37,8 @@ pipeline:
     image: fpfis/httpd-php-dev:7.1
     commands:
       - ./vendor/bin/behat
+
+matrix:
+  COMPOSER_BOUNDARY:
+    - lowest
+    - highest
