--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     "require": {
         "php": "^7.1",
         "drupal/core": "~8.6@alpha",
-        "openeuropa/oe_theme": ">=0.2"
+        "openeuropa/oe_theme": "^0.6"
     },
     "require-dev": {
         "composer/installers": "~1.0",
