--- a/composer.json
+++ b/composer.json
@@ -7,21 +7,23 @@
     "prefer-stable": true,
     "require": {
         "php": "^7.1",
-        "drupal/core": "~8.6@alpha",
+        "drupal/core": "^8.6",
         "openeuropa/oe_theme": "^0.6"
     },
     "require-dev": {
-        "composer/installers": "~1.0",
-        "drupal-composer/drupal-scaffold": "~2.0",
+        "composer/installers": "~1.5",
+        "cweagans/composer-patches": "~1.6",
+        "drupal-composer/drupal-scaffold": "~2.2",
+        "drupal/coder": "~8.2.12",
         "drupal/config_devel": "~1.2",
         "drupal/console": "~1.0",
-        "drupal/drupal-extension": "^4.0.0@alpha",
+        "drupal/drupal-extension": "~4.0.0@alpha",
         "drush/drush": "~9.0",
-        "nikic/php-parser": "~3.0",
-        "openeuropa/code-review": "~0.3",
+        "nikic/php-parser": "~3.1.5",
+        "openeuropa/code-review": "~1.0.0-alpha4",
         "openeuropa/composer-artifacts": "~0.1",
-        "openeuropa/drupal-core-require-dev": "~8.6@alpha",
-        "openeuropa/task-runner": "~0.5"
+        "openeuropa/drupal-core-require-dev": "^8.6",
+        "openeuropa/task-runner": "~1.0"
     },
     "scripts": {
         "drupal-scaffold": "DrupalComposer\\DrupalScaffold\\Plugin::scaffold",
