OPENEUROPA-783: Fix composer dependencies.

--- a/.drone.yml
+++ b/.drone.yml
@@ -19,7 +19,7 @@ pipeline:
     volumes:
     - /cache:/cache
     commands:
-    - composer update --prefer-lowest --ansi
+    - composer update --prefer-lowest --ansi --no-suggest
     when:
       matrix:
         COMPOSER_BOUNDARY: lowest
@@ -30,7 +30,7 @@ pipeline:
     volumes:
     - /cache:/cache
     commands:
-    - composer install --ansi
+    - composer install --ansi --no-suggest
     when:
       matrix:
         COMPOSER_BOUNDARY: highest
