--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
     },
     "require-dev": {
         "composer/installers": "~1.5",
+        "consolidation/robo": "~1.3.1",
         "cweagans/composer-patches": "~1.6",
         "drupal-composer/drupal-scaffold": "~2.2",
         "drupal/coder": "~8.2.12",
