OPENEUROPA-783: Add --no-progress option to improve Drone output.

--- a/.drone.yml
+++ b/.drone.yml
@@ -19,7 +19,7 @@ pipeline:
     volumes:
     - /cache:/cache
     commands:
-    - composer update --prefer-lowest --ansi --no-suggest
+    - composer update --prefer-lowest --ansi --no-suggest --no-progress
     when:
       matrix:
         COMPOSER_BOUNDARY: lowest
@@ -30,7 +30,7 @@ pipeline:
     volumes:
     - /cache:/cache
     commands:
-    - composer install --ansi --no-suggest
+    - composer install --ansi --no-suggest --no-progress
     when:
       matrix:
         COMPOSER_BOUNDARY: highest
