--- a/composer.json
+++ b/composer.json
@@ -6,24 +6,22 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
-        "drupal/core": "^8.6",
         "php": "^7.1",
+        "drupal/core": "^8.6",
         "openeuropa/oe_theme": "^0.6.2"
     },
     "require-dev": {
-        "composer/installers": "~1.5",
-        "consolidation/robo": "~1.3.1",
+        "composer/installers": "~1.2",
         "drupal-composer/drupal-scaffold": "~2.2",
-        "drupal/coder": "~8.2.12",
         "drupal/config_devel": "~1.2",
         "drupal/console": "~1.0",
         "drupal/drupal-extension": "~4.0.0@alpha",
         "drush/drush": "~9.0",
-        "nikic/php-parser": "~3.1",
-        "openeuropa/code-review": "~1.0.0-alpha4",
+        "nikic/php-parser": "~3.0",
+        "openeuropa/code-review": "~0.3",
         "openeuropa/composer-artifacts": "~0.1",
-        "openeuropa/drupal-core-require-dev": "^8.6",
-        "openeuropa/task-runner": "~1.0"
+        "openeuropa/drupal-core-require-dev": "~8.6@alpha",
+        "openeuropa/task-runner": "~0.5"
     },
     "scripts": {
         "drupal-scaffold": "DrupalComposer\\DrupalScaffold\\Plugin::scaffold",
