--- a/.drone.yml
+++ b/.drone.yml
@@ -19,6 +19,7 @@ pipeline:
     volumes:
     - /cache:/cache
     commands:
+    - composer install --ansi --no-suggest --no-progress
     - composer update --prefer-lowest --prefer-stable --ansi --no-suggest --no-progress
     when:
       matrix:
