--- a/.drone.yml
+++ b/.drone.yml
@@ -19,6 +19,8 @@ pipeline:
     volumes:
     - /cache:/cache
     commands:
+    # @todo remove "composer install" step once the following issue is fixed.
+    # @link https://webgate.ec.europa.eu/CITnet/jira/browse/OPENEUROPA-1234
     - composer install --ansi --no-suggest --no-progress
     - composer update --prefer-lowest --prefer-stable --ansi --no-suggest --no-progress
     when:
