OPENEUROPA-2480: Allow sites to use Theme version 2.x.

--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     "require": {
         "php": "^7.1",
         "drupal/core": "^8.7",
-        "openeuropa/oe_theme": "~0.15 || ^1.0"
+        "openeuropa/oe_theme": "~0.15 || ^1.0 || ^2.0"
     },
     "require-dev": {
         "composer/installers": "~1.2",
