--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "drupal/config_devel": "~1.2",
         "drupal/drupal-extension": "~4.0",
         "drush/drush": "~9.0",
+        "guzzlehttp/guzzle": "~6.3",
         "nikic/php-parser": "~3.0",
         "openeuropa/code-review": "~1.0",
         "openeuropa/composer-artifacts": "~0.1",
