--- a/composer.json
+++ b/composer.json
@@ -6,22 +6,21 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
-        "drupal/core": "^8.7",
-        "php": ">=7.2",
-        "openeuropa/oe_theme": "~0.15 || ^1.0 || ^2.0"
+        "drupal/core": "^8.9 || ^9.1",
+        "php": ">=7.3",
+        "openeuropa/oe_theme": "0.915.202109301430"
     },
     "require-dev": {
-        "composer/installers": "~1.2",
-        "drupal-composer/drupal-scaffold": "~2.2",
+        "composer/installers": "^1.5",
+        "drupal/core-composer-scaffold": "^8.9 || ^9.1",
         "drupal/config_devel": "~1.2",
-        "drupal/drupal-extension": "~4.0",
-        "drush/drush": "~9.0",
-        "guzzlehttp/guzzle": "~6.3",
-        "nikic/php-parser": "~3.0",
-        "openeuropa/code-review": "~1.0",
+        "drupal/drupal-extension": "^4.0",
+        "drush/drush": "~10.3",
+        "nikic/php-parser": "^3.1.5 || ^4",
+        "openeuropa/code-review": "^1.6",
         "openeuropa/composer-artifacts": "~0.1",
-        "openeuropa/drupal-core-require-dev": "^8.7",
-        "openeuropa/task-runner": "~1.0-beta3"
+        "openeuropa/drupal-core-require-dev": "^8.9 || ^9.1",
+        "openeuropa/task-runner-drupal-project-symlink": "^1.0"
     },
     "scripts": {
         "drupal-scaffold": "DrupalComposer\\DrupalScaffold\\Plugin::scaffold",
@@ -49,6 +48,11 @@
             "build/profiles/contrib/{$name}": ["type:drupal-profile"],
             "build/modules/contrib/{$name}": ["type:drupal-module"],
             "build/themes/contrib/{$name}": ["type:drupal-theme"]
+        },
+        "drupal-scaffold": {
+            "locations": {
+                "web-root": "./build"
+            }
         }
     },
     "config": {
