--- a/oe_profile.info.yml
+++ b/oe_profile.info.yml
@@ -3,7 +3,7 @@ type: profile
 description: 'OpenEuropa installation profile.'
 project: oe_profile
 version: VERSION
-core: 8.x
+core_version_requirement: ^8.9 || ^9.1
 
 dependencies:
   - node
