--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,8 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
-        "drupal/core": "^8.9 || ^9.1",
-        "php": ">=7.3",
+        "drupal/core": "^8.9 || ^9.1 || ^10.1",
+        "php": ">=8.0",
         "openeuropa/oe_theme": "^3.1"
     },
     "require-dev": {
