OEL-0000: Update drone.

--- a/.drone.yml
+++ b/.drone.yml
@@ -30,10 +30,7 @@ pipeline:
     volumes:
     - /cache:/cache
     commands:
-    # @todo remove "composer install" step once the following issue is fixed.
-    # @link https://webgate.ec.europa.eu/CITnet/jira/browse/OPENEUROPA-1234
-    - composer install --ansi --no-suggest --no-progress
-    - composer update --prefer-lowest --prefer-stable --ansi --no-suggest --no-progress
+    - composer update --prefer-lowest --prefer-stable --ansi --no-progress
     when:
       matrix:
         COMPOSER_BOUNDARY: lowest
@@ -44,7 +41,7 @@ pipeline:
     volumes:
     - /cache:/cache
     commands:
-    - composer install --ansi --no-suggest --no-progress
+    - composer install --ansi --no-progress
     when:
       matrix:
         COMPOSER_BOUNDARY: highest
@@ -71,4 +68,5 @@ matrix:
     - lowest
     - highest
   PHP_VERSION:
-    - 7.3
+    - 8.0
+    - 8.1
