--- a/composer.json
+++ b/composer.json
@@ -17,10 +17,10 @@
         "drupal/drupal-extension": "^4.0",
         "drush/drush": "^10.0.0 || ^11.0.4",
         "nikic/php-parser": "^3.1.5 || ^4",
-        "openeuropa/code-review": "^1.6",
-        "openeuropa/composer-artifacts": "~0.1",
+        "openeuropa/code-review": "^2.0.0-alpha6",
+        "openeuropa/composer-artifacts": "^1.0.0-alpha1",
         "openeuropa/drupal-core-require-dev": "^8.9 || ^9.4 || ^10.1",
-        "openeuropa/task-runner-drupal-project-symlink": "^1.0"
+        "openeuropa/task-runner-drupal-project-symlink": "^1.0-beta6"
     },
     "scripts": {
         "drupal-scaffold": "DrupalComposer\\DrupalScaffold\\Plugin::scaffold",
