--- a/grumphp.yml.dist
+++ b/grumphp.yml.dist
@@ -2,19 +2,33 @@ imports:
   - { resource: vendor/openeuropa/code-review/dist/drupal-conventions.yml }
 parameters:
   tasks.phpcs.ignore_patterns:
+    - build/
+    - node_modules/
     - vendor/
   tasks.phpcs.triggered_by:
-    - php
-    - module
     - inc
-    - profile
     - install
+    - module
+    - php
+    - theme
+    - yml
 
   extra_tasks:
     phpparser:
-      ignore_patterns: "%tasks.phpcs.ignore_patterns%"
+      ignore_patterns:
+       - vendor/
+       - build/
       visitors:
         declare_strict_types: ~
-      triggered_by: "%tasks.phpcs.triggered_by%"
+      triggered_by:
+        - php
+        - module
+        - inc
+        - theme
+        - install
+
+grumphp:
+  git_hook_variables:
+    EXEC_GRUMPHP_COMMAND: 'docker-compose exec -T web'
   extensions:
     - OpenEuropa\CodeReview\ExtraTasksExtension
