--- a/composer.json
+++ b/composer.json
@@ -6,13 +6,13 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
-        "drupal/core": "^9.4 || ^10",
+        "drupal/core": "^9.4",
         "php": ">=8.0",
         "openeuropa/oe_theme": "^3.1"
     },
     "require-dev": {
         "composer/installers": "^1.5",
-        "drupal/core-composer-scaffold": "^9.4 || ^10",
+        "drupal/core-composer-scaffold": "^9.4",
         "drupal/config_devel": "~1.2",
         "drupal/drupal-extension": "^4.0",
         "drush/drush": "^10.0.0 || ^11.0.4",
