--- a/oe_profile.info.yml
+++ b/oe_profile.info.yml
@@ -1,7 +1,7 @@
 name: OpenEuropa Profile
 type: profile
 description: 'OpenEuropa installation profile.'
-core_version_requirement: ^9.4 || ^10
+core_version_requirement: ^9.4
 
 dependencies:
   - node
